2012-09-28  Dima Kogan  <gnuplot@dima.secretsauce.net>

	* src/gplt_x11.c src/gplt_x11.h:  Remove dead code.

2012-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/util.c (streq) src/util.h:  New utility function
	streq(char *a, char *b) returns TRUE if a and b are identical save for
	leading and trailing whitespace.  Use this for matching requested string
	labels in a using spec to the actual column header text in a data file.
	Bug #3571243

2012-09-25  Dima Kogan  <gnuplot@dima.secretsauce.net>

	* src/gplt_x11.c src/mouse.c (do_event) term/x11.trm:
	Feed back the x11 window size from gnuplot_x11 to gnuplot so that
	the coordinates can be rescaled to maintain the correct aspect ratio.
	This allows correct functioning of command like 'set size square' and
	'set view equal xyz' in an interactive x11 output window.

2012-09-24  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/molecule.dem demo/datastrings.dem:  Remove old labelplot demo
	because it failed to show properly scaled xyz;  instead add equal xyz
	to molecule demo.

	* src/graphics.c docs/plotstyles.gnu:  Fix bug preventing explicit
	assignment of color sequence in stacked histograms.

2012-09-21  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/Makefile.am lisp/Makefile.am lisp/configure.in:
	Fix breakage in "make distcheck".

2012-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Incorrect default layout of rotated xtic labels.
	Bug #3568817

	* lisp/configure.in lisp/Makefile.am:  The autoconfigure scripting for
	the lisp directory is failing when $(EMACS) is redefined by the user.
	But the failure is only relevant to testing/patching info-look.el for
	very old versions of emacs.  Deal with it by simply assuming that
	everyone has an emacs version newer than 20.3 and therefore no patching
	is needed.

	* lisp/info-look.20.2.el lisp/info-look.20.3.el: No longer needed.

2012-09-16  Ethan A Merritt  <merritt@u.washington.edu>
